name:                fd
version:             0.1.0.0
cabal-version:       >= 1.10
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Sonnenburg
maintainer:          Andy Sonnenburg <andy22286@gmail.com>
copyright:           (c) Andy Sonnenburg 2012
category:            Control
homepage:            http://github.com/sonyandy/fd
bug-reports:         http://github.com/sonyandy/fd/issues
build-type:          Simple

source-repository head
  type: git
  location: git://github.com/sonyandy/fd.git

flag integer-gmp

library
  default-language: Haskell98
  hs-source-dirs: src
  exposed-modules:
    Control.Monad.FD
    Control.Monad.FD.Internal
  other-modules:
    Control.Monad.FD.Internal.Dom
    Control.Monad.FD.Internal.Int
    Control.Monad.FD.Internal.IntMap.Strict
    Control.Monad.FD.Internal.IntSet
    Control.Monad.FD.Internal.Pruning
    Control.Monad.FD.Internal.State
    Data.Int.Dom.Common
    Data.Int.Dom.IntSet
  build-depends:
    base >= 4 && < 5,
    transformers >= 0.2 && < 0.4,
    logict,
    containers >= 0.5.0.0,
    semigroups
  other-extensions:
    CPP
    FunctionalDependencies,
    MultiParamTypeClasses
    Rank2Types,
    RebindableSyntax,
    RecordWildCards
  if impl(ghc)
    other-extensions: MagicHash, UnboxedTuples
  if impl(ghc >= 7.2)
    other-extensions: Trustworthy
    cpp-options: -DLANGUAGE_Trustworthy
  if impl(ghc >= 7.6)
    other-extensions: EmptyDataDecls, KindSignatures
    cpp-options: -DLANGUAGE_DataKinds -DLANGUAGE_KindSignatures -DLANGUAGE_PolyKinds
  if flag(integer-gmp)
    build-depends: integer-gmp
    other-extensions: MagicHash, UnboxedTuples
    cpp-options: -DPACKAGE_integer_gmp
  ghc-options: -Wall -O2

test-suite doctests
  default-language: Haskell98
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: doctests.hs
  build-depends: base, doctest >= 0.8
  ghc-options: -Wall -threaded

benchmark eq10
  default-language: Haskell98
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: eq10.hs
  build-depends: base, criterion, fd
  ghc-options: -Wall -O2

benchmark eq20
  default-language: Haskell98
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: eq20.hs
  build-depends: base, criterion, fd
  ghc-options: -Wall -O2

benchmark sendmory
  default-language: Haskell98
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: sendmory.hs
  build-depends: base, criterion, fd
  ghc-options: -Wall -O2

benchmark sudoku
  default-language: Haskell98
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: sudoku.hs
  build-depends: base, criterion, fd
  ghc-options: -Wall -O2
